# symlink-track

./: .gitignore  COPYING  Makefile.am  README.md  configure.ac  symlink-track.c
tests/: .gitignore  Makefile.am  testX.sh
